# BIP32c

./: .gitignore  CMakeLists.txt  COPYING.md  README.md
include/: hdwallet.h
main/: CMakeLists.txt  hdwallet.c
sample/: CMakeLists.txt  sample.c
test/: CMakeLists.txt
